# muxdesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-pitfalls.md
docs/archive/: 02-packaging.md  03-extraction.md  README.md
examples/: harness.example.json
muxdesk/: __init__.py  app.py  artifact_detector.py  bind.py  commands.py  event_bus.py  jsonl_tailer.py  preflight.py  pty_bridge.py  session_manager.py  session_registry.py  settings.py  single_writer_actor.py  state_machine.py  status.py  tmux_driver.py  transcript_parser.py
muxdesk/parsers/: __init__.py  base.py  chain.py  claude.py  codex.py  pane.py
muxdesk/scripts/: muxdesk-ask  muxdesk-ask-hook  muxdesk-guardrail-hook
muxdesk/team/: __init__.py  agent_layer.py  contract.py  graph.py  models.py  orchestrator.py  team_manager.py  team_registry.py
openspec/changes/add-parser-multi-provider/: design.md  proposal.md  tasks.md
openspec/changes/add-parser-multi-provider/specs/transcript-parsing/: spec.md
openspec/changes/add-session-bind-checkin/: design.md  proposal.md  tasks.md
tests/: test_app_bind_integration.py  test_artifact_detector.py  test_bind.py  test_codex_parser.py  test_commands.py  test_event_bus.py  test_package.py  test_pane_parser.py  test_parser_chain.py  test_session_manager_providers.py  test_session_registry.py  test_settings.py  test_state_machine.py  test_status.py  test_transcript_parser.py
