[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muxdesk"
dynamic = ["version"]
description = "Terminal-native AI agent cockpit — run AI CLIs in real tmux TTYs, rebuild conversations from transcript jsonl, and drive them from a web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Decayo" }]
keywords = [
    "claude",
    "claude-code",
    "tmux",
    "ai-agent",
    "agent",
    "cockpit",
    "terminal",
    "transcript",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
# Core building blocks are pure-stdlib (only a `tmux`/`claude` binary at runtime).
dependencies = []

[project.optional-dependencies]
# The generic cockpit server (create_app / `uvicorn muxdesk.app:app`).
# jsonschema backs the agent-graph node I/O contracts (muxdesk.team).
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jsonschema>=4.0",
]
test = [
    "pytest>=8.0",
]
# Static lint gate (mirrors muxdesk-web's ESLint). Default ruff rules: pyflakes (F,
# unused imports / undefined names) + a subset of pycodestyle (E) — real bugs, no style churn.
lint = [
    "ruff>=0.13",
]

[project.urls]
Homepage = "https://github.com/Decayo/muxdesk"
Repository = "https://github.com/Decayo/muxdesk"
Issues = "https://github.com/Decayo/muxdesk/issues"

[tool.hatch.version]
path = "muxdesk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["muxdesk"]
# Ship the structured-ask channel scripts (no .py suffix → not picked up as modules).
artifacts = ["muxdesk/scripts/*"]

[tool.hatch.build.targets.sdist]
include = [
    "/muxdesk",
    "/README.md",
    "/REQUIREMENTS.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 120  # documents intent; E501 is not in the default rule set, so long lines aren't flagged

[tool.ruff.lint]
# Keep the default selection (E4/E7/E9 + F). isort (I)/pyupgrade (UP)/bugbear (B) are
# deferred: I would reorder app.py imports (conflicts with in-flight feature PRs) and B
# false-positives on FastAPI's `Body(default=...)` parameter defaults.
extend-select = []

[tool.pytest.ini_options]
testpaths = ["tests"]
